# GoboFlow

./: .gitignore  LICENSE  archivos.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  cache_system.py  data_flow.py  execution_engine.py  graph_manager.py  node_registry.py  node_system.py  serialization.py  socket_types.py  undo_system.py
docs/: README.md
docs/dev/: adding_nodes.md  performance_guidelines.md
nodes/: __init__.py
nodes/base/: __init__.py  base_node.py  generator_node.py  input_node.py  modifier_node.py  output_node.py
nodes/generators/: text_node.py
nodes/inputs/: image_import.py  parameter_node.py  svg_import.py  time_node.py
nodes/materials/: color_node.py  gradient_node.py  texture_node.py
nodes/modifiers/: scale_node.py  transform_node.py
nodes/operations/: merge_node.py
nodes/outputs/: export_node.py  layer_output.py  preview_node.py  viewport_output.py
nodes/primitives/: __init__.py  circle_node.py  curve_node.py  line_node.py  polygon_node.py  rectangle_node.py
scripts/: build.py  generate_icons.py  package.py  run_tests.py
ui/: __init__.py  main_window.py  properties_panel.py  shortcuts.py  themes.py  viewport_widget.py
ui/dialogs/: export_dialog.py  node_search_dialog.py
ui/node_editor/: __init__.py  connection_graphics.py  node_editor_widget.py  node_graphics.py  node_scene.py  node_view.py  selection_box.py  simple_editor.py  socket_graphics.py
ui/panels/: console_panel.py  node_library.py  outliner_panel.py  performance_panel.py  (+2 more)
utils/: constants.py  performance.py
(+65 files in other folders)
